--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -151,27 +151,28 @@ jobs:
           yq eval 'del(.annotations."operators.operatorframework.io.bundle.channels.v1")' -i source_repo/bundle/metadata/annotations.yaml
           yq eval 'del(.annotations."operators.operatorframework.io.bundle.channel.default.v1")' -i source_repo/bundle/metadata/annotations.yaml
 
-      - name: Load existing CSV to extract relatedImages
-        id: extract_related_images
+      - name: Retain current image digests in the RBC repo
         run: |
-         # Define the source and target paths
-         TARGET_CSV=target_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml
-         SOURCE_CSV=source_repo/bundle/manifests/rhods-operator.clusterserviceversion.yaml
+          # Backup current image digests from target repo CSV
+          target_csv="/tmp/rbc_csv.yaml"
+          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml $target_csv
 
-         # Step 1: Load existing target CSV and extract relatedImages
-         related_images=$(yq e '.spec.relatedImages' "$TARGET_CSV" | yq e -P -)
-         echo "Extracted relatedImages: $related_images"
-
-         # Step 2: Modify the source CSV to remove the relatedImages field
-         modified_source=$(yq e 'del(.spec.relatedImages, .spec.RELATED_IMAGES)' "$SOURCE_CSV")
-
-         # Step 3: Merge source content with the target's relatedImages
-         updated_csv=$(echo "$modified_source" | yq e "
-           .spec.relatedImages = $related_images |
-         " -)
-
-         # Step 4: Write the updated CSV back to the target
-         echo "$updated_csv" > "$TARGET_CSV"
+          # Replace source image digests with the ones from the target repo CSV
+          for image in $(grep -oP 'image:\s*\K\S+' $target_csv); do
+            # For each image, update the source repo CSV to retain the target repo's image value
+            sed -i "s|image: .*|image: $image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done
+          
+          # Now sync the other changes (excluding the image field) to the target repo
+          for file in $(find source_repo/bundle -type f -name "*.clusterserviceversion.yaml"); do
+            relative_path=$(realpath --relative-to="source_repo/bundle" "$file")
+            target_file="target_repo/bundle/$relative_path"
+            
+            # Sync only non-image-related fields from source to target
+            grep -v 'image:' "$file" > /tmp/source_without_image.yaml
+            grep 'image:' "$target_file" > /tmp/target_image.yaml
+            cat /tmp/target_image.yaml /tmp/source_without_image.yaml > "$target_file"
+          done
 
 
       - name: Compare and Sync Changes
