--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -115,16 +115,10 @@ jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
-      - name: Install yq
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y jq
-          sudo wget https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64 -O /usr/bin/yq
-          sudo chmod +x /usr/bin/yq
       - name: Checkout source repo
         uses: actions/checkout@v3
         with:
-          repository: DevOps-automation-tasks/rhods-operator.git
+          repository: DevOps-automation-ttasks/rhods-operator.git
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
@@ -137,74 +131,43 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
-      - name: Remove unnecessary fields from source CSV
+      - name: Remove unnecessary fields from CSV
         run: |
-          # Load existing CSV to extract relatedImages first
-          existing_csv=$(cat source_repo/bundle/manifests/*.clusterserviceversion.yaml)
-          related_images=$(echo "$existing_csv" | yq '.spec.relatedImages')
-
-          # Remove unwanted fields from the source CSV but keep relatedImages
-          yq eval 'del(.spec.skipRange, .spec.replaces)' -i source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
+          sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
 
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
-          yq eval 'del(.annotations."operators.operatorframework.io.bundle.channels.v1")' -i source_repo/bundle/metadata/annotations.yaml
-          yq eval 'del(.annotations."operators.operatorframework.io.bundle.channel.default.v1")' -i source_repo/bundle/metadata/annotations.yaml
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
+          sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
+    
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
+          sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
-      - name: Retain current image digests in the RBC repo
+      - name: Backup image and relatedImage fields from target repo
         run: |
-          # Backup current image digests from target repo CSV
-          target_csv="/tmp/rbc_csv.yaml"
-          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml $target_csv
+          # Backup the target repo image and RELATED_IMAGE fields
+          cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
+          grep -E 'image:|RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_images_relatedImages.txt
 
-          # Replace source image digests with the ones from the target repo CSV
-          for image in $(grep -oP 'image:\s*\K\S+' $target_csv); do
-            # For each image, update the source repo CSV to retain the target repo's image value
-            sed -i "s|image: .*|image: $image|g" source_repo/bundle/manifests/*.clusterserviceversion.yaml
-          done
+      - name: Sync files from source to target repo excluding image and RELATED_IMAGE fields
+        run: |
+          # Copy the source files to the target repo
+          rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
           
-          # Now sync the other changes (excluding the image field) to the target repo
-          for file in $(find source_repo/bundle -type f -name "*.clusterserviceversion.yaml"); do
-            relative_path=$(realpath --relative-to="source_repo/bundle" "$file")
-            target_file="target_repo/bundle/$relative_path"
-            
-            # Sync only non-image-related fields from source to target
-            grep -v 'image:' "$file" > /tmp/source_without_image.yaml
-            grep 'image:' "$target_file" > /tmp/target_image.yaml
-            cat /tmp/target_image.yaml /tmp/source_without_image.yaml > "$target_file"
-          done
-
-
-      - name: Compare and Sync Changes
-        run: |
-          sync_files() {
-            local source_dir=$1
-            local target_dir=$2
-            for file in $(find $source_dir -type f); do
-              relative_path=$(realpath --relative-to="$source_dir" "$file")
-              target_file="$target_dir/$relative_path"
-              if [ -f "$target_file" ]; then
-                if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
-                  echo "Updating $target_file"
-                  cp "$file" "$target_file"
-                else
-                  echo "No changes in $target_file"
-                fi
-              else
-                echo "New file detected, copying $file to target repo"
-                mkdir -p "$(dirname "$target_file")"
-                cp "$file" "$target_file"
-              fi
-            done
-          }
-          # Sync files from source_repo/bundle to target_repo/bundle
-          sync_files "source_repo/bundle" "target_repo/bundle"
+          # Merge the target image and RELATED_IMAGE fields back into the synced target CSV
+          while read -r line; do
+            key=$(echo "$line" | cut -d: -f1)
+            value=$(echo "$line" | cut -d: -f2-)
+            sed -i "s|$key:.*|$key:$value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done < /tmp/backup_images_relatedImages.txt
 
       - name: Sync Dockerfile
         run: |
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
             echo "Updating Dockerfile"
             cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
+          else
             echo "No changes in Dockerfile"
           fi
 
