--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,7 +95,6 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
-
 name: Sync Bundle from Operator Repo to RBC Repo
 
 on:
@@ -141,21 +140,23 @@ jobs:
           # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
     
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
-      - name: Backup image and relatedImage fields from target repo
+      - name: Backup image, RELATED_IMAGE, and relatedImages fields from target repo
         run: |
-          # Backup the target repo image and RELATED_IMAGE fields
+          # Backup the target repo image, RELATED_IMAGE, and relatedImages fields
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
-          grep -E 'image:|RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_images_relatedImages.txt
+          
+          # Backup both RELATED_IMAGE and relatedImages fields
+          grep -E 'image:|RELATED_IMAGE_|relatedImages:' /tmp/target_csv.yaml > /tmp/backup_images_relatedImages.txt
 
-      - name: Sync files from source to target repo excluding image and RELATED_IMAGE fields
+      - name: Sync files from source to target repo excluding image, RELATED_IMAGE, and relatedImages fields
         run: |
           # Copy the source files to the target repo
           rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
           
-          # Merge the target image and RELATED_IMAGE fields back into the synced target CSV
+          # Merge the target image, RELATED_IMAGE, and relatedImages fields back into the synced target CSV
           while read -r line; do
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2-)
@@ -178,5 +179,7 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
+          git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
+
           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
