--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,9 +95,7 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
-
 name: Sync Bundle from Operator Repo to RBC Repo
-
 on:
   push:
     branches:
@@ -105,12 +103,10 @@ on:
     paths:
       - 'bundle/**'  # Trigger the workflow for changes to any file in the bundle directory
       - 'Dockerfiles/bundle.Dockerfile'  # Trigger the workflow for changes to the Dockerfile
-
 permissions:
   contents: read
   packages: write
   id-token: write
-
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -122,7 +118,6 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
-
       - name: Checkout target repo
         uses: actions/checkout@v3
         with:
@@ -130,50 +125,41 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
-
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
           sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
-
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
           # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-    
           # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
-
-      - name: Backup image, RELATED_IMAGE, and relatedImages fields from target repo
+      - name: Backup relatedImages and RELATED_IMAGE fields from target repo
         run: |
-          # Backup the target repo image and RELATED_IMAGE fields
+          # Backup the target repo relatedImages and RELATED_IMAGE fields
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
-          
-          # Backup RELATED_IMAGE and the entire relatedImages section
-          grep -E 'image:|RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_images.txt
-          # Backup the entire relatedImages section (multi-line)
+          # Backup RELATED_IMAGE fields
+          grep -E 'RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_related_image.txt
+          # Backup relatedImages section (multi-line)
           awk '/relatedImages:/,/]/' /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt
-
-      - name: Sync files from source to target repo excluding image, RELATED_IMAGE, and relatedImages fields
+      - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
         run: |
           # Copy the source files to the target repo
           rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
-          
-          # Restore the original image and RELATED_IMAGE fields
+          # Copy the source .clusterserviceversion.yaml file, but exclude relatedImages and RELATED_IMAGE fields
+          rsync -av source_repo/bundle/manifests/*.clusterserviceversion.yaml target_repo/bundle/manifests/
+          # Remove existing relatedImages and RELATED_IMAGE fields from the synced target CSV
+          sed -i '/RELATED_IMAGE_/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          sed -i '/relatedImages:/,/\]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          # Restore the RELATED_IMAGE fields
           while read -r line; do
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2-)
-            sed -i "s|$key:.*|$key:$value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          done < /tmp/backup_images.txt
-          
+            sed -i "/spec:/a $key:$value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done < /tmp/backup_related_image.txt
           # Restore the relatedImages section
-          if grep -q 'relatedImages:' target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
-            # Remove the existing relatedImages section from the target repo CSV
-            sed -i '/relatedImages:/,/\]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            # Add the original relatedImages section from the backup
-            sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          fi
-
+          sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
       - name: Sync Dockerfile
         run: |
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
@@ -182,7 +168,6 @@ jobs:
           else
             echo "No changes in Dockerfile"
           fi
-
       - name: Commit and Push Changes to Target Repo
         run: |
           cd target_repo
@@ -191,5 +176,5 @@ jobs:
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
-          git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
+
 
