--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,7 +95,9 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
+
 name: Sync Bundle from Operator Repo to RBC Repo
+
 on:
   push:
     branches:
@@ -103,10 +105,12 @@ on:
     paths:
       - 'bundle/**'  # Trigger the workflow for changes to any file in the bundle directory
       - 'Dockerfiles/bundle.Dockerfile'  # Trigger the workflow for changes to the Dockerfile
+
 permissions:
   contents: read
   packages: write
   id-token: write
+
 jobs:
   sync:
     runs-on: ubuntu-latest
@@ -118,6 +122,7 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
+
       - name: Checkout target repo
         uses: actions/checkout@v3
         with:
@@ -125,41 +130,50 @@ jobs:
           token: ${{ secrets.PAT_TOKEN }}
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
+
+      - name: Check for existing .clusterserviceversion.yaml in target repo
+        run: |
+          if [ -z "$(ls -A target_repo/bundle/manifests/*.clusterserviceversion.yaml 2>/dev/null)" ]; then
+            echo "No .clusterserviceversion.yaml file found in target_repo/bundle/manifests/"
+            exit 1
+          fi
+
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
           sed -i '/replaces/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
+
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
+
       - name: Backup relatedImages and RELATED_IMAGE fields from target repo
         run: |
           # Backup the target repo relatedImages and RELATED_IMAGE fields
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
+          
           # Backup RELATED_IMAGE fields
           grep -E 'RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_related_image.txt
+          
           # Backup relatedImages section (multi-line)
           awk '/relatedImages:/,/]/' /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt
+
       - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
         run: |
-          # Copy the source files to the target repo
-          rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
-          # Copy the source .clusterserviceversion.yaml file, but exclude relatedImages and RELATED_IMAGE fields
-          rsync -av source_repo/bundle/manifests/*.clusterserviceversion.yaml target_repo/bundle/manifests/
-          # Remove existing relatedImages and RELATED_IMAGE fields from the synced target CSV
-          sed -i '/RELATED_IMAGE_/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          sed -i '/relatedImages:/,/\]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          # Sync everything except the fields we want to preserve
+          cp -r source_repo/bundle/* target_repo/bundle/
+          
           # Restore the RELATED_IMAGE fields
           while read -r line; do
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2-)
             sed -i "/spec:/a $key:$value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
           done < /tmp/backup_related_image.txt
+          
           # Restore the relatedImages section
           sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+
       - name: Sync Dockerfile
         run: |
           if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
@@ -168,6 +182,7 @@ jobs:
           else
             echo "No changes in Dockerfile"
           fi
+
       - name: Commit and Push Changes to Target Repo
         run: |
           cd target_repo
@@ -175,6 +190,6 @@ jobs:
           git config user.email "actions@github.com"
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
-          git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
+          git push origin ${{ github.ref_name }}
 
 
