--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -160,22 +160,24 @@ jobs:
 
       - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
         run: |
-          # Sync everything from source repo to target repo
+          # Copy everything from source repo to target repo
           cp -r source_repo/bundle/* target_repo/bundle/
-
-          # Remove existing RELATED_IMAGE fields and relatedImages section from the target CSV
-          sed -i '/RELATED_IMAGE_/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
 
           # Restore the RELATED_IMAGE fields
           while read -r line; do
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
-            sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            # Update only if different
+            if ! grep -q "$key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
+              sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            fi
           done < /tmp/backup_related_image.txt
 
           # Restore the relatedImages section
           if [[ -s /tmp/backup_relatedImages.txt ]]; then
+            # Remove existing relatedImages section first
+            sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            # Append the backed-up relatedImages section
             sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
           fi
 
