--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -117,7 +117,7 @@ jobs:
       - name: Checkout source repo
         uses: actions/checkout@v3
         with:
-          repository: DevOps-automation-tasks/rhods-operator.git
+          repository: DevOps-automation-ttasks/rhods-operator.git
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
@@ -130,13 +130,6 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
-      - name: Verify target .clusterserviceversion.yaml exists
-        run: |
-          if [ -z "$(ls target_repo/bundle/manifests/*.clusterserviceversion.yaml 2>/dev/null)" ]; then
-            echo "No .clusterserviceversion.yaml file found in target_repo/bundle/manifests/"
-            exit 1
-          fi
-
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
@@ -144,42 +137,29 @@ jobs:
 
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
+    
+          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
-      - name: Backup relatedImages and RELATED_IMAGE fields from target repo
+      - name: Backup image and relatedImage fields from target repo
         run: |
-          # Create a temporary file for backup
+          # Backup the target repo image and RELATED_IMAGE fields
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
+          grep -E 'image:|RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_images_relatedImages.txt
 
-          # Backup RELATED_IMAGE fields
-          grep -E 'RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_related_image.txt || echo "No RELATED_IMAGE fields found."
-
-          # Backup relatedImages section (multi-line)
-          awk '/relatedImages:/,/]/' /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt || echo "No relatedImages section found."
-
-      - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
+      - name: Sync files from source to target repo excluding image and RELATED_IMAGE fields
         run: |
-          # Copy everything from source repo to target repo
-          cp -r source_repo/bundle/* target_repo/bundle/
-
-          # Restore the RELATED_IMAGE fields
+          # Copy the source files to the target repo
+          rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
+          
+          # Merge the target image and RELATED_IMAGE fields back into the synced target CSV
           while read -r line; do
             key=$(echo "$line" | cut -d: -f1)
-            value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
-            # Update only if different
-            if ! grep -q "$key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
-              sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            fi
-          done < /tmp/backup_related_image.txt
-
-          # Restore the relatedImages section
-          if [[ -s /tmp/backup_relatedImages.txt ]]; then
-            # Remove existing relatedImages section first
-            sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            # Append the backed-up relatedImages section
-            sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          fi
+            value=$(echo "$line" | cut -d: -f2-)
+            sed -i "s|$key:.*|$key:$value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          done < /tmp/backup_images_relatedImages.txt
 
       - name: Sync Dockerfile
         run: |
