--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -117,7 +117,7 @@ jobs:
       - name: Checkout source repo
         uses: actions/checkout@v3
         with:
-          repository: DevOps-automation-tasks/rhods-operator.git
+          repository: DevOps-automation-ttasks/rhods-operator.git
           token: ${{ secrets.PAT_TOKEN }}
           path: source_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
@@ -139,27 +139,26 @@ jobs:
         run: |
           # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-    
+          
           # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
-      - name: Backup image and relatedImage fields from target repo
+      - name: Backup relatedImage fields from target repo
         run: |
-          # Backup the target repo image and RELATED_IMAGE fields
+          # Backup the target repo relatedImages fields
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
-          grep -E 'image:|RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_images_relatedImages.txt
+          grep 'relatedImages:' -A 10 /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt
 
       - name: Sync files from source to target repo excluding image and RELATED_IMAGE fields
         run: |
           # Copy the source files to the target repo
           rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
           
-          # Merge the target image and RELATED_IMAGE fields back into the synced target CSV
-          while read -r line; do
-            key=$(echo "$line" | cut -d: -f1)
-            value=$(echo "$line" | cut -d: -f2-)
-            sed -i "s|$key:.*|$key:$value|g" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-          done < /tmp/backup_images_relatedImages.txt
+          # Restore the original relatedImages into the synced target CSV
+          if [ -f /tmp/backup_relatedImages.txt ]; then
+            # Append the backup relatedImages back to the target file
+            cat /tmp/backup_relatedImages.txt >> target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          fi
 
       - name: Sync Dockerfile
         run: |
