--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -130,6 +130,13 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
+      - name: Verify target .clusterserviceversion.yaml exists
+        run: |
+          if [ -z "$(ls target_repo/bundle/manifests/*.clusterserviceversion.yaml 2>/dev/null)" ]; then
+            echo "No .clusterserviceversion.yaml file found in target_repo/bundle/manifests/"
+            exit 1
+          fi
+
       - name: Remove unnecessary fields from CSV
         run: |
           sed -i '/olm.skipRange/d' source_repo/bundle/manifests/*.clusterserviceversion.yaml
@@ -137,27 +144,41 @@ jobs:
 
       - name: Remove channels and defaultChannel from annotations.yaml
         run: |
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channels.v1"
           sed -i '/operators.operatorframework.io.bundle.channels.v1:/d' source_repo/bundle/metadata/annotations.yaml
-          
-          # Remove the entire line containing "operators.operatorframework.io.bundle.channel.default.v1:"
           sed -i '/operators.operatorframework.io.bundle.channel.default.v1:/d' source_repo/bundle/metadata/annotations.yaml
 
-      - name: Backup relatedImage fields from target repo
+      - name: Backup relatedImages and RELATED_IMAGE fields from target repo
         run: |
-          # Backup the target repo relatedImages fields
+          # Create a temporary file for backup
           cp target_repo/bundle/manifests/*.clusterserviceversion.yaml /tmp/target_csv.yaml
-          grep 'relatedImages:' -A 10 /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt
 
-      - name: Sync files from source to target repo excluding image and RELATED_IMAGE fields
+          # Backup RELATED_IMAGE fields
+          grep -E 'RELATED_IMAGE_' /tmp/target_csv.yaml > /tmp/backup_related_image.txt || echo "No RELATED_IMAGE fields found."
+
+          # Backup relatedImages section (multi-line)
+          awk '/relatedImages:/,/]/' /tmp/target_csv.yaml > /tmp/backup_relatedImages.txt || echo "No relatedImages section found."
+
+      - name: Sync files from source to target repo excluding relatedImages and RELATED_IMAGE fields
         run: |
-          # Copy the source files to the target repo
-          rsync -av --exclude="*.clusterserviceversion.yaml" source_repo/bundle/ target_repo/bundle/
-          
-          # Restore the original relatedImages into the synced target CSV
-          if [ -f /tmp/backup_relatedImages.txt ]; then
-            # Append the backup relatedImages back to the target file
-            cat /tmp/backup_relatedImages.txt >> target_repo/bundle/manifests/*.clusterserviceversion.yaml
+          # Copy everything from source repo to target repo
+          cp -r source_repo/bundle/* target_repo/bundle/
+
+          # Restore the RELATED_IMAGE fields
+          while read -r line; do
+            key=$(echo "$line" | cut -d: -f1)
+            value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
+            # Update only if different
+            if ! grep -q "$key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
+              sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            fi
+          done < /tmp/backup_related_image.txt
+
+          # Restore the relatedImages section exactly as it was backed up
+          if [[ -s /tmp/backup_relatedImages.txt ]]; then
+            # Remove existing relatedImages section first
+            sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            # Append the backed-up relatedImages section
+            sed -i "/^spec:/r /tmp/backup_relatedImages.txt" target_repo/bundle/manifests/*.clusterserviceversion.yaml
           fi
 
       - name: Sync Dockerfile
@@ -177,5 +198,4 @@ jobs:
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
-
 
