--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -191,11 +191,21 @@ jobs:
           sync_files "source_repo/bundle" "target_repo/bundle"
           
           # Sync Dockerfile
-          if ! diff -q source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile > /dev/null 2>&1; then
-            echo "Updating Dockerfile"
-            cp source_repo/Dockerfiles/bundle.Dockerfile target_repo/bundle/Dockerfile
-          else
-            echo "No changes in Dockerfile
+          if [ -f "source_repo/Dockerfiles/bundle.Dockerfile" ]; then
+            target_file="target_repo/Dockerfiles/bundle.Dockerfile"
+            if [ -f "$target_file" ]; then
+              if ! diff -q "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /dev/null 2>&1; then
+                echo "Updating $target_file"
+                cat "source_repo/Dockerfiles/bundle.Dockerfile" > "$target_file"
+              else
+                echo "No changes in $target_file"
+              fi
+            else
+              echo "New file detected, copying source_repo/Dockerfiles/bundle.Dockerfile to target repo"
+              mkdir -p "$(dirname "$target_file")"
+              cp "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file"
+            fi
+          fi
 
       - name: Commit and Push Changes to Target Repo
         run: |
