--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,6 +95,7 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
+
 name: Sync Bundle from Operator Repo to RBC Repo
 
 on:
@@ -166,7 +167,7 @@ jobs:
       - name: Compare and Sync Changes
         run: |
           # Function to compare and sync files
-          sync_files() {
+          sync _files() {
             local source_dir=$1
             local target_dir=$2
             for file in $(find $source_dir -type f); do
@@ -176,7 +177,7 @@ jobs:
                 if ! diff -q "$file" "$target_file" > /dev/null 2>&1; then
                   echo "Updating $target_file"
                   # Instead of overwriting the file, compare and sync
-                  diff -u "$file" "$target_file" > /tmp/diff.patch
+                  diff -n "$file" "$target_file" > /tmp/diff.patch
                   patch -p0 -d "$target_dir" < /tmp/diff.patch
                 else
                   echo "No changes in $target_file"
@@ -192,12 +193,12 @@ jobs:
           sync_files "source_repo/bundle" "target_repo/bundle"
           
           # Sync Dockerfile
-          if [ -f "source_repo/Dockerfiles/bundle.D ockerfile" ]; then
+          if [ -f "source_repo/Dockerfiles/bundle.Dockerfile" ]; then
             target_file="target_repo/Dockerfiles/bundle.Dockerfile"
             if [ -f "$target_file" ]; then
               if ! diff -q "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /dev/null 2>&1; then
                 echo "Updating $target_file"
-                diff -u "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /tmp/diff.patch
+                diff -n "source_repo/Dockerfiles/bundle.Dockerfile" "$target_file" > /tmp/diff.patch
                 patch -p0 -d "$(dirname "$target_file")" < /tmp/diff.patch
               else
                 echo "No changes in $target_file"
