--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -131,10 +131,14 @@ jobs:
           path: target_repo
           ref: ${{ github.ref_name }}  # Use the same branch name as in the event
 
-      - name: Install required tools
+      - name: Install rsync and yq
         run: |
           sudo apt-get update
-          sudo apt-get install -y rsync yq
+          sudo apt-get install -y rsync
+          # Install yq
+          VERSION=v4.34.2  # Specify the version of yq to install
+          wget https://github.com/mikefarah/yq/releases/download/${VERSION}/yq_linux_amd64 -O /usr/bin/yq
+          chmod +x /usr/bin/yq
 
       - name: Remove unnecessary fields from CSV
         run: |
