--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -95,7 +95,6 @@
 #           git commit -m "Sync changes from source repo" || echo "No changes to commit"
 #           git push origin ${{ github.ref_name }}  # Push to the same branch in the target repo
 
-
 name: Sync Bundle from Operator Repo to RBC Repo
 
 on:
@@ -138,7 +137,8 @@ jobs:
           # Install yq
           VERSION=v4.34.2  # Specify the version of yq to install
           wget https://github.com/mikefarah/yq/releases/download/${VERSION}/yq_linux_amd64 -O /usr/bin/yq
-          chmod +x /usr/bin/yq
+          # Set permissions for yq
+          sudo chmod +x /usr/bin/yq
 
       - name: Remove unnecessary fields from CSV
         run: |
@@ -183,4 +183,5 @@ jobs:
           git add .
           git commit -m "Sync changes from source repo" || echo "No changes to commit"
           git push origin ${{ github.ref_name }}
+
 
