--- a/.github/workflows/bundle-sync.yml
+++ b/.github/workflows/bundle-sync.yml
@@ -181,22 +181,25 @@ jobs:
       - name: Restore RELATED_IMAGE fields and relatedImages section
         run: |
           # Restore the RELATED_IMAGE fields
-          while read -r line; do
+          while IFS= read -r line; do
             key=$(echo "$line" | cut -d: -f1)
             value=$(echo "$line" | cut -d: -f2- | xargs) # Trim leading spaces from the value
-            # Update only if different
-            if ! grep -q "$key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml; then
-              sed -i "/spec:/a $key: $value" target_repo/bundle/manifests/*.clusterserviceversion.yaml
-            fi
+            
+            # Use yq to set the RELATED_IMAGE field in the target CSV
+            yq eval -i ".metadata.annotations[\"$key\"] = \"$value\"" target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            
           done < /tmp/backup_related_image.txt
 
           # Restore the relatedImages section
           if [[ -s /tmp/backup_relatedImages.txt ]]; then
             # Remove existing relatedImages section first
-            sed -i '/relatedImages:/,/]/d' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            yq eval -i 'del(.relatedImages)' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            
             # Append the backed-up relatedImages section
-            sed -i '/^spec:/r /tmp/backup_relatedImages.txt' target_repo/bundle/manifests/*.clusterserviceversion.yaml
+            # Use yq to append the relatedImages section to the spec
+            yq eval -i '.spec.relatedImages = load("/tmp/backup_relatedImages.txt")' target_repo/bundle/manifests/*.clusterserviceversion.yaml
           fi
+
 
       - name: Commit and Push Changes to Target Repo
         run: |
